--- a/Mission6_Wirthlin/Mission6_Wirthlin.csproj
+++ b/Mission6_Wirthlin/Mission6_Wirthlin.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-        <RazorLangVersion>Latest</RazorLangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2" />
     </ItemGroup>
 
     <ItemGroup>
         <None Include="wwwroot\images\JoelHiltonHeadshot.jpg" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\..\Downloads\super_powers_small.webp">
+        <Link>wwwroot\images\super_powers_small.webp</Link>
+      </Content>
     </ItemGroup>
 </Project>
